@@ -1,3 +1,7 @@
+2008-05-30  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-window.c: Drop F11 key handling.
+
 2008-05-29  Jonh Wendell <jwendell@gnome.org>
 
 	* src/vinagre-tab.c: Fix bug #531969 - scrolling on server.
